[package]
name = "pg_dbms_job"
version = "1.5.8-rust"
edition = "2024"

[dependencies]
chrono = "0.4"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
signal-hook = "0.3"
nix = { version = "0.27", default-features = false, features = ["signal", "process", "fs"] }
fallible-iterator = "0.2"
fs2 = "0.4"
