# Copyright (c) 2021-2023 MigOps Inc. (original extension and Perl scheduler)
# Copyright (c) 2025-2026 nettrash (Rust scheduler and fork enhancements)
# Licensed under the MIT License; see the LICENSE file at the repository root.
[package]
name = "pg_dbms_job"
version = "3.0.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["nettrash <nettrash@nettrash.me>"]

[dependencies]
chrono = "0.4"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
signal-hook = "0.3"
nix = { version = "0.27", default-features = false, features = ["signal", "process", "fs"] }
fallible-iterator = "0.2"
fs2 = "0.4"
